Update room
