# service/src/main/java/br/com/sw2you/realmeet/controller/RoomController.java
@@ -3,6 +3,7 @@ package br.com.sw2you.realmeet.controller;
 import br.com.sw2you.realmeet.api.facade.RoomsApi;
 import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
 import br.com.sw2you.realmeet.api.model.RoomDTO;
+import br.com.sw2you.realmeet.api.model.UpdateRoomDTO;
 import br.com.sw2you.realmeet.service.RoomService;
 import br.com.sw2you.realmeet.util.ResponseEntityUtils;
 import org.springframework.http.ResponseEntity;
@@ -38,5 +39,10 @@ public class RoomController implements RoomsApi {
     @Override
     public CompletableFuture<ResponseEntity<Void>> deleteRoom(Long id) {
         return runAsync(() -> roomService.deleteRoom(id), controllersExecutor).thenApply(ResponseEntityUtils::noContent);
+    }
+
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> updateRoom(Long id, UpdateRoomDTO updateRoomDTO) {
+        return runAsync(() -> roomService.updateRoom(id, updateRoomDTO), controllersExecutor). thenApply(ResponseEntityUtils::noContent);
     }
 }
